fixing whitespace on skills page

--- a/src/styles/skills.scss
+++ b/src/styles/skills.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   color: white;
+  height: 100vh;
   background-image: url('./images/bg-bw.jpg');
   background-position: center;
   background-size: cover;
